--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   gateway_url: "https://api.netlify.com"
 
 media_folder: "assets"
-public_folder: "/assets"
+public_folder: "assets"
 
 collections:
   - name: "news"
@@ -22,21 +22,17 @@ collections:
       - {label: "Content", name: "body", widget: "markdown"}
       - {label: "Read More Link", name: "readMoreLink", widget: "string"}
 
-[build]
+[build]:
   publish = "."
   command = ""
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/admin/*"
-  to = "/admin/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/.netlify/identity/*"
-  to = "/.netlify/identity/:splat"
-  status = 200
+redirects:
+  - from: "/*"
+    to: "/index.html"
+    status: 200
+  - from: "/admin/*"
+    to: "/admin/index.html"
+    status: 200
+  - from: "/.netlify/identity/*"
+    to: "/.netlify/identity/:splat"
+    status: 200
